--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.2",
     "web-vitals": "^1.1.2",
